--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,41 @@
     <title>Folio Genie :: Build Your Professional Presence</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/assets/images/foliogenie-icon.ico" />
+    <meta name="theme-color" content="#1976d2" />
+    <!--Meta Data-->
+    <meta
+      name="description"
+      content="Folio Genie is a platform to build your professional presence. It helps you to create your own portfolio website in minutes."
+    />
+
+    <meta
+      name="keywords"
+      content="Folio Genie, Portfolio, Portfolio Website, Portfolio Builder, Portfolio Maker, Portfolio Creator, Portfolio Generator, Portfolio Website Builder, Portfolio Website"
+    />
+    <meta name="author" content="Folio Genie" />
+
+    <!--Open Graph Meta Data-->
+    <meta
+      property="og:title"
+      content="Folio Genie :: Build Your Professional Presence"
+    />
+    <meta
+      property="og:description"
+      content="Folio Genie is a platform to build your professional presence. It helps you to create your own portfolio website in minutes."
+    />
+    <meta
+      property="og:image"
+      content="https://foliogenie.com/assets/images/foliogenie.png"
+    />
+    <meta property="og:url" content="https://foliogenie.com" />
+    <meta property="og:site_name" content="Folio Genie" />
+    <meta property="og:type" content="website" />
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/images/foliogenie-icon.ico"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
