--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Folio Genie :: Build Your Professional Presence</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#556ff6" />
     <!--Meta Data-->
     <meta
       name="description"
